--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config_zh_CN.properties
@@ -5,6 +5,7 @@ Push=\u63A8\u9001\u4EE3\u7801
 Commit.Comment=\u8BC4\u8BBA\u63D0\u4EA4\u8BB0\u5F55
 Enable.CI.Skip=\u652F\u6301 [ci-skip] \u6307\u4EE4\u8FC7\u6EE4\u6784\u5EFA
 Enable.CI.SkipFroTestNotRequired=PR \u4E0D\u8981\u6C42\u5FC5\u987B\u6D4B\u8BD5\u65F6\u8FC7\u6EE4\u6784\u5EFA
+Enable.CI.BuildFroDeleteRef=\u5F53\u5220\u9664 branch \u6216 tag \u65F6\u89E6\u53D1\u6784\u5EFA
 Build.Instruction.Filter=\u6784\u5EFA\u6307\u4EE4\u8FC7\u6EE4
 Build.Instruction.Filter.None=\u65E0
 Build.Instruction.Filter.CiSkip=[ci-skip] \u6307\u4EE4\u8DF3\u8FC7\u6784\u5EFA
