Translations for pull request trigger values

--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config_zh_CN.properties
@@ -44,3 +44,7 @@ Ignore.Pull.Request.Conflicts=\u5FFD\u7565 Pull Request \u51B2\u7A81
 Comments=\u8BC4\u8BBA Pull Requests
 Comment.Regex=\u8BC4\u8BBA\u5185\u5BB9\u7684\u6B63\u5219\u8868\u8FBE\u5F0F
 Retry.Text=Jenkins please retry a build
+triggerOnUpdatePullRequest.None=没有
+triggerOnUpdatePullRequest.Both=源分支和目标分支都已更新
+triggerOnUpdatePullRequest.Source=源分支已更新
+triggerOnUpdatePullRequest.Target=目标分支已更新
