Fixed bug with triggers not starting builds

--- a/src/main/resources/com/gitee/jenkins/connection/GiteeConnectionConfig/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/connection/GiteeConnectionConfig/config_zh_CN.properties
@@ -1,5 +1,5 @@
 Gitee.connections=Gitee \u94FE\u63A5
-Enable.authentication.end.point=\u5F00\u542F '/project' \u8DEF\u7531\u9A8C\u8BC1
+Enable.authentication.end.point=\u5F00\u542F '/gitee-project' \u7ec8\u7ed3\u70b9\u9A8C\u8BC1
 Connection.name=\u94FE\u63A5\u540D
 Gitee.host.URL=Gitee \u57DF\u540D URL
 Gitee.host.desc=Gitee \u57DF\u540D\u5B8C\u6574URL\u5730\u5740 (\u4F8B\u5982 https://gitee.com)
