--- a/src/main/resources/com/gitee/jenkins/publisher/Messages.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/Messages.properties
@@ -2,3 +2,4 @@ GiteeCommitStatusPublisher.DisplayName=Publish build status to Gitee
 name.required=Build name required.
 GiteeMessagePublisher.DisplayName=Add note with build status on Gitee pull requests
 GiteeAcceptPullRequestPublisher.DisplayName=Accept Gitee pull request on success
+GiteeCreatePullRequestPublisher.DisplayName=Create Gitee pull request on success
