--- a/src/main/resources/com/gitee/jenkins/publisher/Messages_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/Messages_zh_CN.properties
@@ -2,3 +2,4 @@ GiteeCommitStatusPublisher.DisplayName=\u53D1\u5E03\u6784\u5EFA\u72B6\u6001\u523
 name.required=\u8BF7\u8F93\u5165\u6784\u5EFA\u540D\u79F0\u3002
 GiteeMessagePublisher.DisplayName=\u5C06\u6784\u5EFA\u72B6\u6001\u8BC4\u8BBA\u5230 Gitee Pull Request \u4E2D
 GiteeAcceptPullRequestPublisher.DisplayName=\u5F53\u6784\u5EFA\u6210\u529F\u81EA\u52A8\u5408\u5E76 Gitee \u7684 Pull Request
+GiteeCreatePullRequestPublisher.DisplayName=\u5F53\u6784\u5EFA\u6210\u529F\u521B\u5EFA Gitee \u7684 Pull Request
