--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config_zh_CN.properties
@@ -5,3 +5,4 @@ Add.datetime=\u6dfb\u52a0\u65e5\u671f\u65f6\u95f4\u0028\u4fdd\u6301\u552f\u4e00\
 Target.branch=\u76ee\u6807\u5206\u652f 
 Source.branch=\u6e90\u5206\u652f
 body=\u63cf\u8ff0
+Label.names=\u6807\u7b7e\u540d\u79f0
