--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config_zh_CN.properties
@@ -6,3 +6,6 @@ Target.branch=\u76ee\u6807\u5206\u652f
 Source.branch=\u6e90\u5206\u652f
 body=\u63cf\u8ff0
 Label.names=\u6807\u7b7e\u540d\u79f0
+Prune.source=\u5220\u9664\u6e90\u5206\u652f 
+Is.draft=\u8bbe\u7f6e\u4e3a\u8349\u7a3f 
+Squash.merge=\u5408\u5e76\u65f6\u4f7f\u7528\u6241\u5e73\u5316 
