Added webhook creation on project configure page

--- a/src/main/resources/com/gitee/jenkins/trigger/Messages.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/Messages.properties
@@ -1,1 +1,5 @@
+connection.success=Created webhook: {0}
+connection.error=Client error: {0}
+webhook.exist=Webhook already exists
+localhost.error=localhost/127.0.0.1 is not allowed here. Check your root URL settings.
 Build.Gitee.WebHook=Build when a change is pushed to Gitee. Gitee webhook URL: {0}
