Started translation for webhook

--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config_zh_CN.properties
@@ -48,3 +48,4 @@ triggerOnUpdatePullRequest.None=没有
 triggerOnUpdatePullRequest.Both=源分支和目标分支都已更新
 triggerOnUpdatePullRequest.Source=源分支已更新
 triggerOnUpdatePullRequest.Target=目标分支已更新
+Webhooks=Webhooks
