--- a/src/main/resources/com/gitee/jenkins/trigger/Messages_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/Messages_zh_CN.properties
@@ -1,1 +1,5 @@
+connection.success=\u6210\u529F
+connection.error=\u8BF7\u6C42\u5931\u8D25: {0}
+webhook.exist=Webhook 已经存在 
+localhost.error=这里不能使用localhost/127.0.0.1, 查看确认你的root URL设定 
 Build.Gitee.WebHook=Gitee webhook \u89E6\u53D1\u6784\u5EFA\uFF0C\u9700\u8981\u5728 Gitee webhook \u4E2D\u586B\u5199 URL: {0}
