--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/WebhookEntry/config_zh_CN.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/WebhookEntry/config_zh_CN.properties
@@ -7,5 +7,5 @@ Tag.Push.Events=标识代码推送触发
 Issues.Event=任务触发
 Note.Events=评论触发
 Pull.Request.Events=PR 触发
-Connect.Webhook=
-Connect.Progress=
+Connect.Webhook=连接 Webhook
+Connect.Progress=测试...
