Add release feature

--- a/src/main/resources/com/gitee/jenkins/publisher/Messages.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/Messages.properties
@@ -3,3 +3,4 @@ name.required=Build name required.
 GiteeMessagePublisher.DisplayName=Add note with build status on Gitee pull requests
 GiteeAcceptPullRequestPublisher.DisplayName=Accept Gitee pull request on success
 GiteeCreatePullRequestPublisher.DisplayName=Create Gitee pull request on success
+GiteeReleasePublisher.DisplayName=Create Gitee release on success
